    Linux 5, which requires _GNU_SOURCE be defined before including APR
    headers to define off64_t.

    Avoid problems with generating the pkg-config configuration file when
    the Kerberos linker flags contain commas.

    Print a clearer warning in WebLogin when used with a mod_webkdc
    older than 3.6.1 and therefore missing the request token type in the
    repsonse.

    Update to C TAP Harness 1.6:

    * Fix compliation of runtests with more aggressive warnings.

WebAuth 3.7.3 (2010-09-20)

    Explicitly link the mod_webauthldap module with the portability glue
    library, fixing a build failure on Red Hat Enterprise 4 x86_64.

    Fix LDAP attribute retrieval in WebAuth 2.x backward compatibility
    mode, which was broken in 3.7.0.

    The WebAuth library also installs a pkg-config configuration file for
    the use of software that wants to link against it.

    Update to rra-c-util 2.7:

    * Look for krb5-config in /usr/kerberos/bin after the user's PATH.
    * Update utility library and test suite for newer GCC warnings.

WebAuth 3.7.2 (2010-08-12)

    Fix wa_keyring option parsing problems introduced in 3.7.0.  Correctly
    count arguments so that commands are recognized correctly and do not
    require -- before commands with negative time offsets, like "gc -90d".

    Fix uninitialized variable that caused wa_keyring to randomly default
    to verbose mode for list.

    mod_webkdc now returns a user rejected error instead of a generic
    Kerberos error for attempted authentications to expired accounts or
    accounts set to disallow authentication, allowing WebLogin to display
    a rejected user error message rather than a generic failure message.

    Add portability code for old MIT Kerberos and Heimdal libraries
    without krb5_get_init_creds_opt_free.

    Fix build problems with with Perl module (only built when the WebKDC
    is enabled) on platforms where all shared libraries need to be linked
    with explicitly.
